src/Tests/Error/NotInstanceOfError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class NotInstanceOfError extends AssertError
{
}
